# Action-Registry

./: .env.example  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
action-registry/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
action-registry/action_registry/: main.py
action-registry/tests/: test_lookup.py
alembic/: env.py
alembic/versions/: 20260304_0001_init_actions_tables.py
app/: crypto.py  db.py  main.py  models.py  schemas.py  settings.py
docs/: ARCHITECTURE.md  GPT_ACTIONS.md  MCP_INTEGRATION.md  ROADMAP.md  VISION.md
tests/: test_crypto.py  test_main.py
