[tool.poetry]
name = "action-registry"
version = "0.1.0"
description = "A lightweight clearing-house for callable actions."
authors = ["Jules <jules@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
sqlalchemy = {extras = ["postgresql_psycopg2binary"], version = "^2.0.30"}
pydantic = "^2.7.1"
alembic = "^1.13.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
httpx = "^0.27.0"
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = ["."]
